# vibe-song-planner-ai

./: .env.example  LICENSE.txt  pyproject.toml  requirements.txt
src/: app.py  app_schedule.py  config.py  db.py  main.py
src/clients/: awsS3.py  db.py  telegram_client.py
src/utils/: aws.py  download.py  s3_sync.py  telegram_sender.py
